FIX- Dropdown in Navbar Not Visible on Hover #308

--- a/assets/scss/_navbar_project.scss
+++ b/assets/scss/_navbar_project.scss
@@ -16,13 +16,13 @@
       display: block;
     }
       .dropdown-menu {
-        transform: translate(-15%, 0rem) !important;
+        transform: translate(-15%, 0rem);
       }
   }
 }
   .dropdown-menu {
     padding: 0;
-    transform: translate(-15%, 2.5rem) !important;
+    transform: translate(-15%, 2.5rem);
     border-radius: 0;
     .dropdown-item {
       height: 5rem;
